clusters/production/apps/kubedoom/namespace-kubedoom.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubedoom
  labels:
    app.kubernetes.io/part-of: production
